--- a/polysym.ipynb
+++ b/polysym.ipynb
@@ -785,8 +785,7 @@
     "\n",
     "p1=poly((b-a+1)*(x+1)-x*(x+1),a,b,x,domain='QQ')\n",
     "p2=poly((y-a+1)*(2*a-b+1)+3*(y-a+1)*(y-a)/2+(b-a+1)*(x-y+a)-(x+1)*x,a,b,x,y,domain='QQ')\n",
-    "p3=poly((y-b+a+1)*(2*a-b+1)+3*(y-a+1)*(y-a)/2+(b-a+1)\n",
-    "*(x-y+a)-(x+1)*x,a,b,x,y,domain='QQ') #TODO: correct this\n",
+    "p3=poly((y-b+a+1)*(2*a-b+1)+3*(y-a+1)*(y-a)/2+(b-a+1)*(x-y+a)-(x+1)*x,a,b,x,y,domain='QQ') #TODO: correct this\n",
     "display(p1)\n",
     "display(p2)\n",
     "alist=[]\n",
@@ -802,11 +801,9 @@
     "    ylist.append([])\n",
     "    for j in range(6):\n",
     "        xlist[i].append(poly((blist[j]-alist[i])/2,m,n,domain='QQ'))\n",
-    "        xlist[i][j]=poly(xlist[i][j]-xlist[i][j].\n",
-    "        TC()+floor(xlist[i][j].TC()),m,n,domain='QQ')\n",
+    "        xlist[i][j]=poly(xlist[i][j]-xlist[i][j].TC()+floor(xlist[i][j].TC()),m,n,domain='QQ')\n",
     "        ylist[i].append(poly(2*blist[j]/3,m,n,domain='QQ'))\n",
-    "        ylist[i][j]=poly(ylist[i][j]-ylist[i][j].\n",
-    "        TC()+floor(ylist[i][j].TC()),m,n,domain='QQ')\n",
+    "        ylist[i][j]=poly(ylist[i][j]-ylist[i][j].TC()+floor(ylist[i][j].TC()),m,n,domain='QQ')\n",
     "\n",
     "p1list=[]\n",
     "p2list=[]\n",
